# specrepo

./: .env.example  .gitignore  .taskmasterconfig  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  sample_har_file.har
.cursor/rules/: package_management.mdc
.github/workflows/: ci.yml
backend/: .coverage  Dockerfile  PACKAGE_MANAGEMENT.md  PYTHON_SETUP.md  README.md  activate.sh  alembic.ini  configure_ide.py  debug_test.py  demo_contract_validation.py  main.py  pyproject.toml  requirements.txt  run_clean.py  seed_data.py  test_processing.py
backend/app/: dependencies.py  middleware.py  models.py  schemas.py
backend/app/auth/: api_key.py
backend/app/db/: session.py
backend/app/routers/: api_specifications.py  contract_validations.py  environments.py  har_uploads.py  mocks.py  validation_runs.py  validations.py  wiremock.py
backend/app/services/: __init__.py  api_specifications.py  contract_validation.py  environments.py  har_ai_processor.py  har_parser.py  har_processing.py  har_to_openapi.py  har_to_wiremock.py  har_uploads.py  mock_configuration.py  n8n_notifications.py  schemathesis_integration.py  wiremock_integration.py
backend/docs/: har_ai_processor.md
backend/examples/: har_ai_processing_example.py  har_to_wiremock_example.py
backend/migrations/: env.py
backend/migrations/versions/: 118b96c3e5fe_add_validation_run_configuration_fields.py  87ef3dd353b2_add_environments_table_for_provider_url_.py  9c8951b27cb2_create_initial_tables.py  ddaf96f289c2_add_contract_validations_table.py
backend/tests/: conftest.py  test_api_specifications.py  test_auth.py  test_contract_validation.py  test_har_ai_processor.py  test_har_parser.py  test_har_processing.py  test_har_processing_notifications.py  test_har_to_openapi.py  test_har_to_wiremock.py  test_har_uploads.py  test_migrations.py  test_mocks.py  test_models.py  test_n8n_integration.py  test_n8n_notifications.py  test_schemathesis_integration.py  test_validations_endpoints.py  test_wiremock_integration.py
docs/: deployment-guide.md  docker-compose-guide.md
docs/mvp/: ImplementationOverview.md  ImplementationPlan.md  Presentation.md  TechStack.md  UseCaseDiagrams.md  presentation.html
docs/research/: Report.md
examples/: sample-api.har
frontend/: .prettierrc.json  Dockerfile  Dockerfile.dev  eslint.config.js  index.html  jest.config.cjs  jest.config.js  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  setupTests.ts
frontend/src/components/: ContractHealthDashboard.tsx  ContractSketches.tsx  Dashboard.tsx  HARFileUpload.tsx  HARManager.tsx  HARUploadsList.tsx  Header.tsx  Login.tsx  MockDeployment.tsx  ProtectedRoute.tsx  Settings.tsx  SpecificationDetail.tsx  SpecificationsList.tsx  ValidationForm.tsx  ValidationResults.tsx  ValidationsList.tsx
frontend/src/components/__tests__/: ContractHealthDashboard.test.tsx  MockDeployment.test.tsx  SpecificationDetail.test.tsx  SpecificationsList.test.tsx
frontend/src/hooks/: useApiClient.ts  useSpecifications.ts
frontend/src/services/: api.ts  apiExample.ts  apiUtils.ts
frontend/src/store/: authStore.ts  specificationsStore.ts  validationStore.ts
n8n/: HAR_WORKFLOWS_SETUP.md  README.md
n8n/workflows/: README.md  api-spec-notification.json  har-processed-notification-workflow.md  har-processed-notification.json  har-review-request-workflow.md  har-review-request.json  unified-notification-workflow.md  unified-notification.json
scripts/: env.example  n8n_manual_setup_instructions.md  prd.txt  setup_n8n_workflow.md  setup_n8n_workflow.py  test_email_delivery.py  test_har_workflows.py  test_n8n_webhook.py
(+8 files in other folders)
