[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.1"]

[project.optional-dependencies]
dev = ["ruff>=0.3.2", "pytest>=7.4.4"]

[tool.ruff]
# Optional: Add ruff specific configurations here if needed

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Force include main.py at the root of the project
# The key is the path on disk, the value is the path in the wheel.
force-include = { "main.py" = "main.py" }
